--- a/firstLAB/style.css
+++ b/firstLAB/style.css
@@ -49,6 +49,12 @@ body {
     gap: 10px;
 }
 
+.logo {
+    border: 2px solid rgba(0,0,0,0.1); 
+    gap: 1px;
+}
+.bull img { width: 50%; }
+
 .icon-btn {
     background: white;
     border: none;
@@ -114,11 +120,6 @@ body {
     position: absolute;
     pointer-events: none; 
 }
-
-.logo {
-    border: 2px solid rgba(0,0,0,0.1); 
-}
-.bull img { width: 50%; }
 
 .shirt {
     top: 10%;
