--- a/firstLAB/style.css
+++ b/firstLAB/style.css
@@ -42,6 +42,13 @@ body {
     border-radius: 20px;
 }
 
+.menu a.inactive {
+    background: white;
+    color: black;
+    padding: 5px 15px;
+    border-radius: 20px;
+}
+
 
 .user-actions {
     display: flex;
